unpackaged/main/default/objects/QS_Track_Update__c/QS_Track_Update__c.object-meta.xml
<CustomObject>
    <label>Track Update</label>
    <nameField>
        <displayFormat>TU-{0000}</displayFormat>
        <label>Track Updates No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Track Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>