unpackaged/main/default/objects/QS_Track_Update__c/fields/QS_Accomplishments_this_week__c.field-meta.xml
<CustomField>
    <fullName>QS_Accomplishments_this_week__c</fullName>
    <label>Accomplishments this week</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>