unpackaged/main/default/objects/QS_Track_Update__c/fields/QS_Dependencies_Blockers__c.field-meta.xml
<CustomField>
    <fullName>QS_Dependencies_Blockers__c</fullName>
    <label>Dependencies/Blockers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>