unpackaged/main/default/objects/QS_Track_Update__c/fields/QS_Focus_Areas_for_Next_Week__c.field-meta.xml
<CustomField>
    <fullName>QS_Focus_Areas_for_Next_Week__c</fullName>
    <label>Focus Areas for Next Week</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>