unpackaged/main/default/objects/QS_Track_Update__c/fields/QS_Key_Deliverables_Upcoming_Milestones__c.field-meta.xml
<CustomField>
    <fullName>QS_Key_Deliverables_Upcoming_Milestones__c</fullName>
    <label>Key Deliverables and Upcoming Milestones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>