unpackaged/main/default/objects/QS_Track_Update__c/fields/QS_Numerical_Status__c.field-meta.xml
<CustomField>
    <fullName>QS_Numerical_Status__c</fullName>
    <description>Applies a numerical value to the overall status options</description>
    <formula>CASE( QS_Status__c , &quot;Green&quot;, 2, &quot;Yellow&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Applies a numerical value to the overall status options</inlineHelpText>
    <label>Numerical Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>