unpackaged/main/default/objects/QS_Track_Update__c/fields/QS_Risk_Comments__c.field-meta.xml
<CustomField>
    <fullName>QS_Risk_Comments__c</fullName>
    <label>Risk Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>