unpackaged/main/default/objects/QS_Track_Update__c/fields/QS_Schedule_Status__c.field-meta.xml
<CustomField>
    <fullName>QS_Schedule_Status__c</fullName>
    <label>Schedule Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>