unpackaged/main/default/objects/QS_Track_Update__c/fields/QS_Status__c.field-meta.xml
<CustomField>
    <fullName>QS_Status__c</fullName>
    <description>Red - Guaranteed risk that deliverables will be missed, late
Yellow - Deliverables are behind schedule, but there is a clear plan to mitigate risk
Green - On schedule, little or limited risk</description>
    <inlineHelpText>Red - Guaranteed risk that deliverables will be missed, late
Yellow - Deliverables are behind schedule, but there is a clear plan to mitigate risk
Green - On schedule, little or limited risk</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <color>#33CC00</color>
                <label>Green</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
                <color>#F3D904</color>
                <label>Yellow</label>
            </value>
            <value>
                <fullName>Red</fullName>
                <color>#FF0000</color>
                <label>Red</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>