unpackaged/main/default/objects/QS_Track_Update__c/fields/QS_Track__c.field-meta.xml
<CustomField>
    <fullName>QS_Track__c</fullName>
    <label>Track</label>
    <referenceTo>QS_Track__c</referenceTo>
    <relationshipName>Track_Status_Updates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>