unpackaged/main/default/objects/QS_Track_Update__c/fields/QS_Week_Ending_Date__c.field-meta.xml
<CustomField>
    <fullName>QS_Week_Ending_Date__c</fullName>
    <label>Week Ending Date</label>
    <type>Date</type>
</CustomField>