unpackaged/main/default/objects/QS_Track_Update__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>QS_Track__c</columns>
    <columns>QS_Week_Ending_Date__c</columns>
    <columns>QS_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>